--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@ body {
   font-size: 14px;
   font-family: "Nunito Sans", sans-serif;
   font-weight: 300;
+  transition: 0.5s all cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
